--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,49 +14,63 @@ body {
     padding: 20px;
     background-color: #f9f1e7;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   .logo {
-    width: 80px;
-    margin-bottom: 20px;
+    width: 55px;
+    margin-bottom: 5px;
   }
   
   h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #b22222;
+    font-family: "Cardo", sans-serif;
+    font-size: 33px;
+    margin-bottom: 10px;
+    color: #000000;
   }
   
   .form input {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ccc;
+    border: 1px solid #6b6b6b;
     border-radius: 4px;
     font-size: 16px;
   }
   
-  .form p {
+  .form input::placeholder {
+    font-family: "Poppins", sans-serif;
+    font-weight: bold; 
+    color: #000000;
     font-size: 14px;
+  }
+
+  .form p {
+    font-size: px;
     margin: 10px 0;
   }
   
   .form a {
-    color: #b22222;
+    font-family: "Cardo", sans-serif;
+    color: #D1202A;
     text-decoration: none;
   }
   
   .form a:hover {
     text-decoration: underline;
   }
+
+  .form p {
+    font-family: "Poppins", sans-serif;
+    font-size: 15px;
+  }
   
   .join-btn {
-    background-color: #b22222;
+    background-color: #D1202A;
     color: #fff;
     border: none;
     padding: 10px;
     border-radius: 4px;
+    font-family: "Poppins", sans-serif;
     font-size: 16px;
     cursor: pointer;
     width: 100%;
@@ -67,9 +81,10 @@ body {
   }
   
   .admin-link {
+    font-family: "Cardo", sans-serif;
     display: block;
-    margin-top: 20px;
-    color: #b22222;
+    margin-top: 50px;
+    color: #D1202A;
     text-decoration: none;
   }
   
