--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -304,7 +304,7 @@ body {
   padding: 15px;
   text-align: center;
   border: 1px solid black;
-  border-radius: 0px;
+  border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
 }
@@ -363,7 +363,121 @@ margin: 10px 0;
   color: #000000;
   text-align: center;
 }
-  
+
+.news-section {
+  text-align: center;
+  padding: 50px 20px;
+  color: #5a2e19;
+}
+
+.news-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.news-card {
+  width: 300px;
+  border-radius: 10px;
+  overflow: hidden;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s;
+}
+
+.news-card:hover {
+  transform: scale(1.05);
+}
+
+.news-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.news-card h3 {
+  font-size: 18px;
+  margin: 15px;
+  color: #ffffff;
+}
+
+.view-more {
+  display: block;
+  text-decoration: none;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 16px;
+  background-color: #e2cf9a;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 10px;
+  transition: background-color 0.3s;
+}
+
+.view-more:hover {
+  background-color: #65948b;
+}
+
+
+.news-card.red {
+  background-color: #a11919;
+}
+
+/*css untuk FOOTER*/
+.footer {
+  background-color: #a11919;
+  color: #fff;
+  text-align: center;
+  padding: 20px 10px;
+  font-family: Arial, sans-serif;
+}
+
+.footer .social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 10px;
+}
+
+.footer .social-icons a img {
+  width: 30px;
+  height: 30px;
+  transition: transform 0.3s;
+}
+
+.footer .social-icons a img:hover {
+  transform: scale(1.2);
+}
+
+.footer p {
+  margin: 10px 0;
+  font-size: 14px;
+}
+
+.footer .app-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 10px 0;
+}
+
+.footer .app-buttons a img {
+  width: 150px; /* Ukuran default untuk badge */
+  height: auto;
+  transition: transform 0.3s;
+}
+
+.footer .app-buttons a img:hover {
+  transform: scale(1.05);
+}
+
+.footer p:last-of-type {
+  font-size: 12px;
+  margin-top: 15px;
+}
+
+
   
   /* Media query untuk layar tablet (maksimal 768px) */
 @media (max-width: 768px) {
