--- a/assets/css/merch.css
+++ b/assets/css/merch.css
@@ -99,7 +99,7 @@ body {
   
   .hero-image-wrapper img {
     width: 100%;
-    max-height: 650px;
+    max-height: 100%;
     object-fit: cover;
   }
   
