--- a/assets/css/merch.css
+++ b/assets/css/merch.css
@@ -268,4 +268,58 @@ color: #e60000; /* Warna merah untuk harga */
 font-weight: bold;
 margin: 10px 0;
 }
+
+/*css untuk FOOTER*/
+.footer {
+  background-color: #a11919;
+  color: #fff;
+  text-align: center;
+  padding: 20px 10px;
+  font-family: Arial, sans-serif;
+}
+
+.footer .social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 10px;
+}
+
+.footer .social-icons a img {
+  width: 30px;
+  height: 30px;
+  transition: transform 0.3s;
+}
+
+.footer .social-icons a img:hover {
+  transform: scale(1.2);
+}
+
+.footer p {
+  margin: 10px 0;
+  font-size: 14px;
+}
+
+.footer .app-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 10px 0;
+}
+
+.footer .app-buttons a img {
+  width: 150px; /* Ukuran default untuk badge */
+  height: auto;
+  transition: transform 0.3s;
+}
+
+.footer .app-buttons a img:hover {
+  transform: scale(1.05);
+}
+
+.footer p:last-of-type {
+  font-size: 12px;
+  margin-top: 15px;
+}
+
   
