--- a/assets/css/players.css
+++ b/assets/css/players.css
@@ -1,3 +1,61 @@
+.player-banner {
+    margin-top: 10px;
+    position: relative;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+  }
+  
+  .player-banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .banner-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Efek gelap pada gambar */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+  }
+  
+  .banner-overlay h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 80px;
+    margin: 0;
+  }
+  
+  .banner-overlay .categories {
+    margin-top: 20px;
+  }
+  
+  .banner-overlay .categories a {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+    padding: 10px 20px;
+    border: 1px solid white;
+    border-radius: 5px;
+    transition: all 0.3s;
+  }
+  
+  .banner-overlay .categories a:hover {
+    background: white;
+    color: black;
+  }
+  
+
+
 .player-card {
     position: relative;
     width: 400px;
