--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -2,17 +2,18 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #EAE1D2;
+    background-color: #f5f0e8;
 }
 
 header {
     text-align: center;
     padding: 20px;
-    background-color: #EAE1D2;
+    background-color: #f5f0e8;
     border-bottom: 1px solid #ddd;
 }
 
 h1 {
+    font-size: 80px;
     margin: 0;
     color: #333;
 }
@@ -22,7 +23,7 @@ main {
 }
 
 .upload-form {
-    max-width: 500px;
+    max-width: 600px;
     padding: 20px;
     border: 1px solid #ddd;
     background: #fff;
@@ -70,7 +71,7 @@ main {
 }
 
 .product-card {
-    background: #EAE1D2;
+    background: #f5f0e8;
     padding: 15px;
     text-align: center;
     border: 1px solid black;
@@ -133,7 +134,7 @@ main {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #EAE1D2;
+    background-color: #f5f0e8;
     border-top: 1px solid #ddd;
     position: relative;
     bottom: 0;
