--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -97,24 +97,75 @@ body {
     margin-top: 20px;
   }
   
-  .hero-image-wrapper img {
-    width: 100%;
-    max-height: 650px;
-    object-fit: cover;
-  }
+.hero-image-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.slider {
+  display: flex;
+  transition: transform 0.5s ease-in-out; /* Animasi pergeseran */
+}
+
+
+.slide {
+  min-width: 100%;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.slide img {
   
-  .headline {
-    position: absolute;
-    top: 80%;
-    left: 33%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-family: "Playfair Display", serif;
-    font-size: 35px;
-    text-align: left;
-    margin-left: 3%;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-  }
+  width: 1350px;
+  height: 700px;
+}
+
+.headline-text {
+  position: absolute;
+  font-family: "Playfair Display", serif;
+  top: 70%;
+  color: white;
+  font-size: 35px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.headline-text a {
+  display: block;
+  position: relative;
+  text-decoration: none;
+  color: white;
+}
+
+.headline-text a:hover h1 {
+  color: #ff0808; /* Mengubah warna headline ketika hover */
+  text-decoration: underline;
+}
+
+/* Tombol prev dan next */
+.controls {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(-50%);
+}
+
+button.prev, button.next {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button.prev:hover, button.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
   
   /* Styling logo besar */
   .container {
